--- a/TODO
+++ b/TODO
@@ -10,4 +10,19 @@
 3. Check Instagram Function still works as intended
   - Research how Instagram is blocking my algorithms
   - Find legal way around
-  - 
+4. Stadardise mood so it can be interpreted from the TraingData.csv file ie put all moods on same scale instead of wide variety of different floats and integers. 
+  -"INSTAGRAM_l": ia1.readLikes(), "INSTAGRAM_c": ia1.commentReading(), "SPOTIFY_v": sam2.spotifyReadFull(), "VOICE_e": er2.predictValue("audio1.wav")
+  - Change likes to - likes and + likes, 
+  - Change comments to range of -2, 2 This is already done by this function so it should be fine. 
+  - Change spotify valence to -2, 2 scale Can play around with the weighting of this later!
+  - Where -2 is very bad, -1 is bad, 0 is neutral, 1 is good, 2 is very good.
+5. Write an exception handler for instagram
+  - I need to know that instagram will not hold up the entire process
+  - I will instead replace the two instagram values with a zero instead of putting NA in their position.
+6. Create a way to interpret the data so that a single mood value can be extracted
+  - Add up all the values
+  - Maybe add a way to change weightings?
+7. Make a way to record audio
+  - needs to delete past recording and make a new recording
+8. Make a kivy 
+  
